Open Mason Phase 3, will need to do some bugfixing, but this is a working implementation.